# SP-assignment

./: CMakeLists.txt  Parser.c  history.txt  linenoise.c  linenoise.h  main.c  newT  t1  t2  t3  t4  t5  tokenizer.c  tshell_func.c  tshell_func.h  tx  tx1
